[package]
name = "text_adventure_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rusqlite = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
actix = "0.13"
actix-web-actors = "4"
chrono = "0.4.38"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
